--- a/app/templates/b.html
+++ b/app/templates/b.html
@@ -40,7 +40,21 @@
 
 <script type="text/javascript">
 
-	// your solution here
+	$(function(){
+
+    var stopPress = true;
+    
+    setInterval(function(){
+      if (stopPress) {
+        $(".shape-container").append( $("<div class = 'p2-circle bg-blue'></div>"));
+      }
+    }, 1000);
+    
+  $(".btn.btn-light.float-right").on("click",()=>{
+    stopPress = false;
+  });
+  
+});
 
 </script>
 </body>
